--- a/index.html
+++ b/index.html
@@ -7,9 +7,77 @@
 </head>
 <body>
         <div class="main">
-<ul>
-    
-</ul>
+                <nav>
+                                <div class="logo">
+                                        <img src="photos/logo.png" alt="logo">
+                                </div>
+                                        <div class="nav-links">
+                                                <ul>
+                                                        <li><a href="#">Home</a></li>
+                                                        <li><a href="#">Phone</a></li>
+                                                        <li><a href="#">Accesories</a></li>
+                                                        <li><a href="#">Cart</a></li>
+                                                </ul>
+                                        </div>
+                </nav>
+                <div class="information">
+                        <div class="overlay"></div>
+                        <img src="photos/mobile.png" alt="mobile" class="mobile">
+                        <div id="circle">
+                                <div class="feature one">
+                                        <img src="photos/battery.png" alt="">
+                                        <div>
+                                                <h1> Battery Life </h1>
+                                                <p>5000mAh, 72Hrs Standby</p>
+                                        </div>
+                                </div>
+                                <div class="feature two">
+                                        <img src="photos/camera.png" alt="">
+                                        <div>
+                                                <h1> Camera </h1>
+                                                <p>12MP, AI lens</p>
+                                        </div>
+                                </div>
+                                <div class="feature three">
+                                        <img src="photos/display.png" alt="">
+                                              <div>  <h1> Display </h1>
+                                                <p>6.5 Mini-Drop Fullscreen</p>
+                                        </div>
+                                </div>
+                                <div class="feature four">
+                                        <img src="photos/processor.png" alt="">                           
+                                        <div>
+                                                <h1> Processor </h1>
+                                                <p>Snapdragron Octa-core 11nm</p>
+                                        </div>
+                                </div>
+                        </div>
+                </div>
+                <div class="controls">
+                        <img src="photos/arrow.png" alt="" id="upBtn">
+                        <h3>Features</h3>
+                        <img src="photos/arrow.png" alt="" id="downBtn">
+                </div>
         </div>
+        <script>
+                var circle = document.getElementById("circle");
+                var upBtn = document.getElementById("upBtn");
+                var downBtn = document.getElementById("downBtn");
+
+                var rotateValue = circle.style.transform;
+                var rotateSum;
+
+                upBtn.onclick = function(){
+                        rotateSum = rotateValue + "rotate(-90deg)";
+                        circle.style.transform = rotateSum;
+                        rotateValue = rotateSum
+                }
+                downBtn.onclick = function(){
+                        rotateSum = rotateValue + "rotate(90deg)";
+                        circle.style.transform = rotateSum;
+                        rotateValue = rotateSum
+                }
+               
+        </script>
 </body>
 </html>
